// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`shallow <Infobox /> components check props: infobox 1`] = `
<div
  className="infobox"
>
  <div
    className="infobox-header"
  >
    <button
      className="close"
      onClick={[MockFunction]}
      type="button"
    >
      <span>
        ×
      </span>
    </button>
    <div
      className="row-name"
    >
      test
       
      <sup>
        <a
          href="wiki"
          rel="noopener noreferrer"
          target="_blank"
        >
          wiki
        </a>
      </sup>
    </div>
    <i
      aria-controls="infobox-collapse"
      aria-expanded={true}
      className="fas fa-angle-down"
      onClick={[Function]}
    />
  </div>
  <ForwardRef
    in={true}
  >
    <div
      id="infobox-collapse"
    >
      <table>
        <tbody>
          <tr>
            <td
              colSpan="2"
            >
              <img
                src="flag"
              />
            </td>
          </tr>
          <tr>
            <td>
              <MemoizedFormattedMessage
                id="capital"
              />
            </td>
            <td>
              <a
                href="capital.wiki"
                rel="noopener noreferrer"
                target="_blank"
              >
                capital.name
              </a>
            </td>
          </tr>
          <tr>
            <td>
              <MemoizedFormattedMessage
                id="area"
              />
            </td>
            <td>
              area
            </td>
          </tr>
          <tr>
            <td>
              <MemoizedFormattedMessage
                id="population"
              />
            </td>
            <td>
              population
            </td>
          </tr>
          <tr>
            <td>
              <MemoizedFormattedMessage
                id="currency"
              />
            </td>
            <td>
              currency
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </ForwardRef>
</div>
`;

exports[`shallow <Infobox /> components check props: infobox-empty 1`] = `
<div
  className="infobox"
>
  <div
    className="infobox-header"
  >
    <button
      className="close"
      type="button"
    >
      <span>
        ×
      </span>
    </button>
    <div
      className="row-name"
    >
       
      <sup>
        <a
          rel="noopener noreferrer"
          target="_blank"
        >
          wiki
        </a>
      </sup>
    </div>
    <i
      aria-controls="infobox-collapse"
      aria-expanded={true}
      className="fas fa-angle-down"
      onClick={[Function]}
    />
  </div>
  <ForwardRef
    in={true}
  >
    <div
      id="infobox-collapse"
    >
      <table>
        <tbody>
          <tr>
            <td
              colSpan="2"
            >
              <img
                src="coat_of_arms"
              />
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </ForwardRef>
</div>
`;

exports[`shallow <Infobox /> components click collapse: infobox 1`] = `
<div
  className="infobox"
>
  <div
    className="infobox-header"
  >
    <button
      className="close"
      onClick={
        [MockFunction] {
          "calls": [
            [],
          ],
          "results": [
            {
              "type": "return",
              "value": undefined,
            },
          ],
        }
      }
      type="button"
    >
      <span>
        ×
      </span>
    </button>
    <div
      className="row-name"
    >
      test
       
      <sup>
        <a
          href="wiki"
          rel="noopener noreferrer"
          target="_blank"
        >
          wiki
        </a>
      </sup>
    </div>
    <i
      aria-controls="infobox-collapse"
      aria-expanded={true}
      className="fas fa-angle-down"
      onClick={[Function]}
    />
  </div>
  <ForwardRef
    in={true}
  >
    <div
      id="infobox-collapse"
    >
      <table>
        <tbody>
          <tr>
            <td
              colSpan="2"
            >
              <img
                src="flag"
              />
            </td>
          </tr>
          <tr>
            <td>
              <MemoizedFormattedMessage
                id="capital"
              />
            </td>
            <td>
              <a
                href="capital.wiki"
                rel="noopener noreferrer"
                target="_blank"
              >
                capital.name
              </a>
            </td>
          </tr>
          <tr>
            <td>
              <MemoizedFormattedMessage
                id="area"
              />
            </td>
            <td>
              area
            </td>
          </tr>
          <tr>
            <td>
              <MemoizedFormattedMessage
                id="population"
              />
            </td>
            <td>
              population
            </td>
          </tr>
          <tr>
            <td>
              <MemoizedFormattedMessage
                id="currency"
              />
            </td>
            <td>
              currency
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </ForwardRef>
</div>
`;

exports[`shallow <Infobox /> components click collapse: infobox-collapse 1`] = `
<div
  className="infobox"
>
  <div
    className="infobox-header"
  >
    <button
      className="close"
      onClick={
        [MockFunction] {
          "calls": [
            [],
          ],
          "results": [
            {
              "type": "return",
              "value": undefined,
            },
          ],
        }
      }
      type="button"
    >
      <span>
        ×
      </span>
    </button>
    <div
      className="row-name"
    >
      test
       
      <sup>
        <a
          href="wiki"
          rel="noopener noreferrer"
          target="_blank"
        >
          wiki
        </a>
      </sup>
    </div>
    <i
      aria-controls="infobox-collapse"
      aria-expanded={false}
      className="fas fa-angle-up"
      onClick={[Function]}
    />
  </div>
  <ForwardRef
    in={false}
  >
    <div
      id="infobox-collapse"
    >
      <table>
        <tbody>
          <tr>
            <td
              colSpan="2"
            >
              <img
                src="flag"
              />
            </td>
          </tr>
          <tr>
            <td>
              <MemoizedFormattedMessage
                id="capital"
              />
            </td>
            <td>
              <a
                href="capital.wiki"
                rel="noopener noreferrer"
                target="_blank"
              >
                capital.name
              </a>
            </td>
          </tr>
          <tr>
            <td>
              <MemoizedFormattedMessage
                id="area"
              />
            </td>
            <td>
              area
            </td>
          </tr>
          <tr>
            <td>
              <MemoizedFormattedMessage
                id="population"
              />
            </td>
            <td>
              population
            </td>
          </tr>
          <tr>
            <td>
              <MemoizedFormattedMessage
                id="currency"
              />
            </td>
            <td>
              currency
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </ForwardRef>
</div>
`;
